# icservice-test

./: Makefile.am  configure.ac
include/: .gitignore
src/: .gitignore  Makefile.am  ic_service.c  icservice  ipc_common.c
